<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/headerView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageViewEmployeeAvatar"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:src="@drawable/ic_person"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"/>

    <ImageView
        android:id="@+id/imageViewRight"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_notification"
        android:layout_margin="24dp" />

    <ImageView
        android:id="@+id/imageViewSecondRight"
        android:layout_toLeftOf="@+id/imageViewRight"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_search"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/textViewTitleMenu"
        android:layout_below="@+id/imageViewEmployeeAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Services"
        android:textStyle="bold"
        android:layout_marginLeft="24dp"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"/>

</RelativeLayout>