<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/mainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorLightGrey"
    android:layout_height="match_parent">

    <include layout="@layout/item_header" />

    <EditText
        android:id="@+id/editTextSearchService"
        android:layout_width="match_parent"
        android:layout_below="@+id/headerView"
        android:background="@drawable/rounded_background_grey"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:hint="@string/search_service"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_below="@+id/editTextSearchService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_above="@+id/navigationView"/>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?android:attr/windowBackground"
        android:elevation="5dp"
        app:menu="@menu/bottom_menu"
        app:labelVisibilityMode="labeled"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>